--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.49.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@tanstack/vue-query-devtools": "^5.49.1",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/language-server": "^2.0.24",
     "autoprefixer": "^10.4.19",
